set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_executable(practice_a practice_a.cpp)

add_executable(abc086a abc086a.cpp)

add_executable(abc081a abc081a.cpp)

add_executable(abc081b abc081b.cpp)

add_executable(abc087b abc087b.cpp)

add_executable(abc083b abc083b.cpp)

add_executable(abc088b abc088b.cpp)

add_executable(abc085b abc085b.cpp)

add_executable(abc085c abc085c.cpp)

add_executable(abc049c abc049c.cpp)
